--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -17,6 +17,7 @@
 <script src="/assets/cockpit/js/moment.min.js"></script>
 <script src="/assets/cockpit/js/moment-timezone.min.js"></script>
 <script src="/assets/cockpit/js/angular-moment.min.js"></script>
+<script src="/assets/cockpit/js/socket.min.js"></script>
 
 <script src="/assets/js/snap.js"></script>
 <script src="/assets/js/date.js"></script>
@@ -82,3 +83,4 @@
 <script src="/assets/cockpit/js/service.deploy.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.call.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.datetime.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/service.socket.js?v=<?=Cana_Util::gitVersion()?>"></script>
