--- a/include/views/default/cockpit2/frontend/settlement/settlement-drivers-payment.phtml
+++ b/include/views/default/cockpit2/frontend/settlement/settlement-drivers-payment.phtml
@@ -379,7 +379,7 @@
 				<tr class="transparent" ng-if="pay_type_reimbursement">
 					<td></td>
 					<td></td>
-					<td><strong>Total Reimburse</strong></td>
+					<td><strong>Total Reimbursed</strong></td>
 					<td><strong>$ {{result.calcs.total_reimburse | formatPrice}}</strong></td>
 					<td></td>
 					<td></td>
