--- a/include/views/default/cockpit/restaurants/restaurant.phtml
+++ b/include/views/default/cockpit/restaurants/restaurant.phtml
@@ -425,10 +425,6 @@
 							</div>
 
 							<div class="admin-item-desc">
-								restaurant's actual open hours
-							</div>
-
-							<div class="admin-item-desc">
 								e.g. “12 PM - 2:30 AM”
 							</div>
 
@@ -441,7 +437,10 @@
 							</div>
 
 							<div class="admin-item-desc">
-								Don’t forget to include whatever buffer for closing the restaurant told you. It’s usually ~15 min before regular closing.
+								If Crunchbutton drivers do the delivery, hours are the intersection of the restaurants hours and Crunchbutton delivery hours.
+							</div>
+							<div class="admin-item-desc">
+								Don’t forget to include a buffer for closing, if appropriate.
 							</div>
 						</div>
 
