--- a/include/views/default/cockpit/charts/pie_communities.phtml
+++ b/include/views/default/cockpit/charts/pie_communities.phtml
@@ -2,7 +2,7 @@
 
 	<div class="row-fluid">
 		<div class="span12">
-			<h4 style="text-align:center;">Orders per Restaurant by Community (last 14 days)</h4>	
+			<h4 style="text-align:center;">Orders per Restaurant by Community (last 14 days) - doesn't work</h4>
 		</div>
 	</div>
 
@@ -16,7 +16,7 @@
 		}
 	?>
 	<div class="span12">
-		<h5 style="text-align:center;"><?php echo $group; ?></h5>	
+		<h5 style="text-align:center;"><?php echo $group; ?></h5>
 	</div>
 	<div id="chart-<?=$chartId?><?php echo $count; ?>" style="min-width: 100%; height:250px; margin: 0 auto"></div>
 	<center style="height:60px;">
@@ -64,9 +64,9 @@
 			});
 	});
 	</script>
-	<?php 
+	<?php
 	$count++;
-	} 
+	}
 	?>
 </div>
 </div>
