--- a/include/views/default/cockpit2/frontend/drivers/drivers-summary.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-summary.phtml
@@ -223,7 +223,7 @@
 													</td>
 													<td>Tip</td>
 													<td>Delivery Fee</td>
-													<td>CB Cash Fee</td>
+													<td>Minus Crunchbutton Fees You Collected in Cash</td>
 													<td>Pay</td>
 													<td class="hide-tiny-screen">&nbsp;</td>
 													<td>Reimbursement</td>
