--- a/include/views/default/cockpit2/frontend/drivers/drivers-docs-form.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-docs-form.phtml
@@ -55,7 +55,7 @@
 	</table>
 
 	<h2 class="title driver-docs-text">
-		Please upload a clear picture of your Drivers License and Insurance Card here. You can do this right from your smartphone.
+		Below upload a clear picture of your Drivers License and Insurance card. You can do this right from your smartphone in some web browsers if you've take the photo in your camera app before you press Upload below. If that doesn't work, use Chrome on your computer <i class="fa fa-smile-o"></i>
 	</h2>
 
 	<table class="tb-grid driver-docs-grid">
