--- a/include/views/default/cockpit/orders/content.phtml
+++ b/include/views/default/cockpit/orders/content.phtml
@@ -107,6 +107,12 @@ $permissionSupportView = c::admin()->permission()->check(['global','support-all'
 						}
 					?>
 					<br/>
+					<?php if( $order->txn && $order->env == 'live' ){ ?>
+						<br/>
+						<a target="_blank"  href="https://dashboard.balancedpayments.com/#/marketplaces/***REMOVED***/debits/<?php echo $order->txn ?>">Balanced transaction</a>
+					<?php } ?>
+
+
 				</td>
 				<td nowrap="">
 					<?php $date->setTimeZone( new DateTimeZone( c::config()->timezone ) ); ?>
