--- a/include/views/default/cockpit/drivers/shift/summary/shift.phtml
+++ b/include/views/default/cockpit/drivers/shift/summary/shift.phtml
@@ -63,7 +63,7 @@
 													Make it permanent?
 												<?php } ?>
 											</td>
-											<td></td>
+											<td>Notes</td>
 										</tr>
 									</thead>
 									<tbody>
