lots of staff page changes
partial #4116

--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -3281,3 +3281,7 @@ input[type="checkbox"].switch + div:before {
 .deploy-commit-select {
 	width: 10em;
 }
+
+.staff-community-repeat:not(:first-child):before {
+	content: ", ";
+}
