adde zebra to staff

--- a/include/views/default/cockpit2/frontend/staff/staff-list.phtml
+++ b/include/views/default/cockpit2/frontend/staff/staff-list.phtml
@@ -30,7 +30,7 @@
 	</div>
 
 	<div class="box-content2 box-content-table">
-		<table>
+		<table class="tb-zebra">
 			<tr>
 				<th>Name</th>
 				<th>Phone</th>
