--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -1192,7 +1192,7 @@ input {
 	margin-bottom:1.5em;
 }
 	.tb-zebra tr:nth-child(2n){
-		background: #F5F5F5;
+		background: #f9f9f9;
 	}
 	.tb-zebra td{
 		color: #333;
