--- a/include/views/default/cockpit2/frontend/orders/orders-list.phtml
+++ b/include/views/default/cockpit2/frontend/orders/orders-list.phtml
@@ -21,7 +21,7 @@
 	</div>
 
 	<div class="box-content2 box-content-table">
-		<table>
+		<table class="tb-zebra">
 			<tr>
 				<th>Info</th>
 				<th>Date</th>
