--- a/include/views/default/cockpit2/frontend/deploy/deploy-home.phtml
+++ b/include/views/default/cockpit2/frontend/deploy/deploy-home.phtml
@@ -4,7 +4,7 @@
 
 	<h1 class="subltitle"><i class="fa fa-database"></i>&nbsp;&nbsp;<span>Servers</span></h1>
 	<div class="box-content2 box-content-table">
-		<table>
+		<table class="tb-zebra">
 			<tr>
 				<th>Server</th>
 				<th>Last Update</th>
@@ -21,7 +21,7 @@
 
 	<h1 class="subltitle "><i class="fa fa-bookmark"></i>&nbsp;&nbsp;<span>Versions</span></h1>
 	<div class="box-content2 box-content-table">
-		<table>
+		<table class="tb-zebra">
 			<tr>
 				<th>Version</th>
 				<th>Server</th>
