--- a/include/views/default/cockpit2/frontend/tickets/tickets-view.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-view.phtml
@@ -6,7 +6,7 @@
 
 	<h1 class="subltitle "><i class="fa fa-comments-o"></i>&nbsp;&nbsp;<span>Messages</span></h1>
 	<div class="box-content2 box-content-table">
-		<table>
+		<table class="tb-zebra">
 			<tr>
 				<th>Support&nbsp;ID</th>
 				<th>From</th>
@@ -30,7 +30,7 @@
 	
 	<h1 class="subltitle"><i class="fa fa-phone"></i>&nbsp;&nbsp;<span>Calls</span>&nbsp;&nbsp;<div class="title-loader" ng-if="!calls"><i class="fa fa-refresh fa-spin"></i></div></h1>
 	<div class="box-content2 box-content-table">
-		<table>
+		<table class="tb-zebra">
 			<tr>
 				<th>Support&nbsp;ID</th>
 				<th>From</th>
