--- a/include/views/default/cockpit2/frontend/deploy/deploy-server.phtml
+++ b/include/views/default/cockpit2/frontend/deploy/deploy-server.phtml
@@ -76,7 +76,7 @@
 
 	<h1 class="subltitle "><i class="fa fa-bookmark"></i>&nbsp;&nbsp;<span>Versions</span></h1>
 	<div class="box-content2 box-content-table">
-		<table>
+		<table class="tb-zebra">
 			<tr>
 				<th>Version</th>
 				<th>Server</th>
