--- a/include/views/default/cockpit2/frontend/orders/orders-list.phtml
+++ b/include/views/default/cockpit2/frontend/orders/orders-list.phtml
@@ -48,5 +48,17 @@
 			</tr>
 		</table>
 	</div>
+	
+	<table class="tb-pagination right" ng-if="pages > 1">
+		<tbody>
+			<tr>
+				<td class="td-prev"><button class="button orange" ng-if="query.page > 1" ng-click="setPage(query.page-1)">prev</button></td>
+				<td class="td-info">Page {{query.page}} of {{pages}}</td>
+				<td class="td-next"><button class="button orange" ng-if="query.page < pages" ng-click="setPage(query.page+1)">next</button></td>
+			</tr>
+		</tbody>
+	</table>
+	
+	<div class="divider"></div>
 
 </div>
