added paging hotkeys

--- a/include/views/default/cockpit2/frontend/staff/staff-list.phtml
+++ b/include/views/default/cockpit2/frontend/staff/staff-list.phtml
@@ -51,7 +51,7 @@
 		</table>
 	</div>
 	
-	<table class="tb-pagination right" ng-if="pages > 1">
+	<table class="tb-pagination right" ng-if="pages > 1" page-key>
 		<tbody>
 			<tr>
 				<td class="td-prev"><button class="button orange" ng-if="query.page > 1" ng-click="setPage(query.page-1)">prev</button></td>
