--- a/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
@@ -2,7 +2,7 @@
 
 <div class="content-padding">
 
-<h1 class="title left"><i class="fa fa-support"></i><span>Help</span></h1>
+<h1 class="title left"><i class="fa fa-support"></i><span>FAQ</span></h1>
 
 	<div class="divider"></div>
 
@@ -10,24 +10,215 @@
 		<b>Have questions during a delivery?</b><br>
 		TXT us at <a ng-click="callText('646-783-1444')">646-783-1444</a>
 		<br><br>
-		<b>When do I fill out my schedule for the next week?</b><br>
-		Make sure to fill out your schedule by Monday at 8PM EDT at the latest.
-		<br><br>
-		<b>Can I earn cash back for money spent during my shifts at restaurants?</b><br>
-		Why Yes! If you are interested in getting extra cash back during your shifts, here are links to apply for the cards we'd recommend: they're specifically for college students and many have extra cash back for food purchases.
-			<br/>
-			<a href="/drivers/help/credit-card" class="link orange">Credit Cards for Crunchbutton Student Deliverers</a>
-		<br><br>
-		<b>Payment:</b><br>
-		At the end of each week, you will be reimbursed for your credit/debit card spendings plus what you earned. You get to keep all cash received from cash orders. If there are discrepancies between what you paid for the order versus what the customer was charged (not including taxes, delivery fee, etc), email team@crunchbutton.com so we can fix prices online.
-		<br><br>
-		<b>Insurance:</b><br>
-		Youbeo, Inc has an insurance policy that will protect Youbeo and its drivers from liability claims arising from a motor vehicle collision during the course of business. The protection is up to $1,000,000 liability insurance policy that protects you against claims to third parties for injuries and property damage. This protection does not cover physical damage to any vehicle being used by a driver associated with Youbeo. Physical damage to any employee or subcontract’s vehicle must be done through the individual's primary insurance company.
-	</p>
 
-	<br><br>
+		<b>
+			When are shift preferences due?
+		</b>
+		<br>
+		Monday 8 PM Eastern, but the sooner the better. The driver week runs Thurs-Wed.
+		<br><br>
+
+		<b>
+			Do I get all my tips?
+		</b>
+		<br>
+		Yes, every cent!
+		<br><br>
+
+		<b>
+			How can I get tipped more on cash orders?
+		</b>
+		<br>
+		Easy: when a customer asks you how much the order is, say the order total, not including tip.<br>
+		Customer: O hello driver hurray my food, how much is it??<br>
+		You: $25.67, not including tip.<br>
+		Customer: Ok, here, have a million dollars, keep the change.<br>
+		You: K thx bye.
+		<br><br>
+
+		<b>
+			How do I use my invite code and how do I earn extra $$$ with it?
+		</b>
+		<br>
+		Go to your <a href="/profile" class="link orange">profile page</a>, copy your invite code, get new customers to enter it in their Notes section for $2 off their first order and you’ll earn $3 for each person you refer.
+		<br><br>
+
+		<b>
+			Stuff drivers are doing with codes that's working great:
+		</b>
+		<br>
+		-talk to literally everyone you can when waiting to pick up food at restaurants or deliver it at dorms/buildings. Talking to EVERYONE waiting in line at Chipotle, etc. is PERFECT.
+		-post on Facebook/twitter<br>
+		-hand out cards with your code on them
+		<br><br>
+
+		<b>
+			How do I pick up food faster at the restaurant?
+		</b>
+		<br>
+		For restaurants where we don’t send the order directly to the restaurant, you’re told to “place the order yourself.”  Do this faster by placing the order on the restaurant’s app! These chains have apps in most locations—Chipotle, Taco Bell, Panda Express, Chik Fil A, Subway
+		<br><br>
+
+		<b>
+			What are Flex vs Perma-Shifts?
+		</b>
+		<br>
+		You'll work either the same days every week (perma-shifts) or different days each week (flex shifts). In either case, you can view your shifts any time on cockpit. For flex shifts, you submit your shift preferences on <a href="/drivers/shifts/schedule" class="link orange">driver scheduling page</a>. Email us atteam@crunchbutton.com to set up perma-shifts.
+		<br><br>
+
+		<b>
+			When do I get $$$?
+		</b>
+		<br>
+		At the end of each week. You get to keep all cash received from cash orders as an advance towards that too.
+		<br><br>
+
+		<b>
+			There’s a bug with Crunchbutton.com/cockpit.la/text messages/a customer says there’s a bug with the website/menu prices are wrong
+		</b>
+		<br>
+		Text us at <a ng-click="callText('646-783-1444')">646-783-1444</a> with the exact details. We hate bugs, so if you can tell us enough info to reproduce and fully fix the problem or correct the whole menu, we’ll add a $10 bonus to your next payment!
+		<br><br>
+
+		<b>
+			How does my PEX card work?
+		</b>
+		<br>
+		For drivers with PEX cards--When a customer pays by credit card, you’ll use your PEX card to pay for it in the store. If the customer is paying by cash, you’ll pay with your own money because the customer will be paying you in cash. Text us your number when you receive the card and we’ll activate it.
+		<br><br>
+
+		<b>
+			How do cash orders work?
+		</b>
+		<br>
+		You pay in the restaurant with your own money. The customer pays you in cash for the total amount they’re paying, which is not how much you’re actually making on the order, so when you receive cash orders it functions as an advance on the money we’d be paying you, and it gets deducted from your next payment. Except tips, which you get to keep! [See other question for how to make HUGE cash tips].
+		<br><br>
+
+		<b>
+			What do I actually do here again?
+		</b>
+		<br>
+		As a driver you will deliver any orders customers place during your shift.  When an order arrives, you'll get a text on your phone linking you to the order page where you can view the details for that order - customer name, phone, and address, plus the restaurant name and address and what food to get there. Be sure to mark your orders as Accepted, Picked Up, and Delivered at the appropriate times. You don't have to deliver an order before picking up the next one.  We aim for sub-45-min delivery times, so do whatever is most efficient!
+		<br><br>
+
+		<b>
+			What do I do at the restaurant?
+		</b>
+		<br>
+		Don’t worry - you’ll be told on the order page. Some restaurants have formal arrangements with Crunchbutton, whereas at others you just buy the food yourself.  You can use the Crunchbutton PexCard to buy the food, except when the customer is paying cash - in that case, you should use your own money and get paid back immediately.  If the customer is a no-show, we'll reimburse you for the cost of the food.
+		<br><br>
+
+		<b>
+			I want to work more shifts. What do I do?
+		</b>
+		<br>
+		Text us at <a ng-click="callText('646-783-1444')">646-783-1444</a>. You can also text other drivers and offer to drive for them—you can find the other drivers in your community and their numbers on the Shifts page.
+		<br><br>
+
+		<b>
+			I can’t drive one of my upcoming shifts. Can I switch shifts with someone?
+		</b>
+		<br>
+		Sure, contact other drivers from <a href="https://cockpit.la/drivers/shifts">cockpit.la/drivers/shifts</a> to ask if someone can trade with you. Then text us to know about the trade. If you absolutely can’t find anyone yourself, it's important you give us 2 days notice if you ever can't make a shift you're scheduled for. We put a lot of faith in drivers to always be there for shifts - that way we don't have to overschedule and you can make as much in tips as possible. Otherwise we might have to shut down the community, which leads to sad customers and other drivers potentially not being able to work!
+		<br><br>
+
+		<b>
+			When do I get told what shifts I've been assigned?
+		</b>
+		<br>
+		You’ll be texted on Wed at 10 am Pacific, and you’ll be able to see in <a href="https://cockpit.la/drivers/shifts">cockpit.la/drivers/shifts</a> too!
+		<br><br>
+
+		<b>
+			I didn’t get paid the right amount. What’s wrong?
+		</b>
+		<br>
+		This shouldn’t ever happen, sorry!! Text us at <a ng-click="callText('646-783-1444')">646-783-1444</a> or email david@crunchbutton.com with as many details as possible and we’ll figure it out!
+		<br><br>
+
+		<b>
+			Can I change my cockpit password?
+		</b>
+		<br>
+		Sure, but right now we have to do it for you manually. Text us what you want us to change your password to at <a ng-click="callText('646-783-1444')">646-783-1444</a>.
+		<br><br>
+
+		<b>
+			How does your insurance work?
+		</b>
+		<br>
+		Youbeo, Inc has an insurance policy that will protect Youbeo and its drivers from liability claims arising from a motor vehicle collision during the course of business. The protection is up to $1,000,000 liability insurance policy that protects you against claims to third parties for injuries and property damage. This protection does not cover physical damage to any vehicle being used by a driver associated with Youbeo. Physical damage to any employee or subcontractor’s vehicle must be done through the individual's primary insurance company.
+		<br><br>
+
+		<b>Other Pointers and Notes:</b>
+		<br><br>
+
+		<b>
+			Change:
+		</b>
+		<br>
+		Make sure to carry change while on shift!  Some customers will pay with cash, so try to have at least $20 in small bills.
+		<br><br>
+
+		<b>
+			Phone Battery:
+		</b>
+		<br>
+		Before your shift, make sure your phone is charged and NOT on night mode.
+		<br><br>
+
+		<b>
+			Double-Check the Order:
+		</b>
+		<br>
+		Sometimes restaurants don't get the order exactly right, or they don't see the notes - so don't forget to double-check the order contents so you don't have to go back for missing items!
+		<br><br>
+
+		<b>
+			Price Discrepancies:
+		</b>
+		<br>
+		We'll tell you how much the food should cost.  If it costs more, email team@crunchbutton.com a photo of your receipt right away so we can change the prices and get you reimbursed correctly.
+		<br><br>
+
+		<b>
+			Multiple Orders:
+		</b>
+		<br>
+		You don't have to deliver an order before picking up the next one.  We aim for sub-45-min delivery times, so do whatever is most efficient!
+		<br><br>
+
+		<b>
+			Parking:
+		</b>
+		<br>
+		As you get more experience, you'll learn the best parking spots for each restaurant.  Restaurants will also often have a reserved space out front or around the corner.  If that won't do, call ahead of time so you can just pop in and out very quickly!
+		<br><br>
+
+		<b>
+			Do I Get Reimbursed for Gas?
+		</b>
+		<br>
+		Regional gas prices are factored into the standard contracting rate, which varies by location!
+		<br><br>
+
+		<b>
+			What Should I Tell the Restaurant?
+		</b>
+		<br>
+		The whole restaurant staff usually isn't trained about Crunchbutton, and in some cases we don't have a formal relationship with the restaurant yet, so it's best not to invite confusion.  In most cases there's no need to mention you're picking up a delivery order.  Just order the food yourself, or if we send the order directly, then say you're there to pick up the takeout order under the customer's name.
+		<br><br>
+
+		<b>
+			I don’t understand something else, screw you, you suck waaaaaa!!
+		</b>
+		<br>
+		Hey, we’re really sorry you feel that way. Text us at <a ng-click="callText('646-783-1444')">646-783-1444</a> and we’ll figure it out!! Want to send us some anonymous feedback?? <a href="https://docs.google.com/forms/d/1TsYU7LKyi8AQhM317n1v-SEiP-8OuiQIReV6XZHd-HM/viewform">Use this form!</a>
+		<br><br>
+
+	<!-- <br><br>
 	<p>
 		<a target="_system" href="https://s3.amazonaws.com/uploads.hipchat.com/41812/283752/nmB3Y2yH2HkjWLM/DeliveryDriverGuidelines.pdf">Download the Delivery Driver Guidelines</a>
-	</p>
+	</p> -->
 
 </div>
