--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -141,8 +141,8 @@
 			<a href="/deploy" class="menu-link" ng-if="account.user.permissions.GLOBAL || account.user.permissions['SERVER-DEPLOY'] || account.user.permissions['SERVER-DEPLOY-ADMIN'] && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'deploy' || navigation.page == 'deploy-server' || navigation.page == 'deploy-version')}">
 				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 					<tr>
-						<td class="side-menu-icon"><i class="fa fa-database"></i></td>
-						<td class="side-menu-label">Server Deployment</a></td>
+						<td class="side-menu-icon"><i class="fa fa-code"></i></td>
+						<td class="side-menu-label">Code Deployment</a></td>
 					</tr>
 				</table>
 			</a>
