--- a/include/views/default/cockpit2/frontend/deploy/deploy-version.phtml
+++ b/include/views/default/cockpit2/frontend/deploy/deploy-version.phtml
@@ -43,7 +43,7 @@
 				<td class="deploy-status-{{version.status}}">
 					{{version.status}}
 					<span ng-if="version.status=='deploying'">&nbsp;&nbsp;&nbsp;<i class="fa fa-cog fa-spin"></i></span>
-					<span ng-if="version.status=='new'">&nbsp;&nbsp;&nbsp;<a href="" ng-click="cancel(version.id_deploy_version)"><i class="fa fa-times-circle"></i></a></span>
+					<span ng-if="version.status=='new'">&nbsp;&nbsp;&nbsp;<a href="" ng-click="cancel(version.id_deploy_version)" ng-if="account.user.permissions['SERVER-DEPLOY-ADMIN']"><i class="fa fa-times-circle"></i></a></span>
 				</td>
 			</tr>
 
